# cloud-computing

compose/: README.md  compose.yml
compose_db/: compose.yml
compose_db/docker/: env_backup
containerization/: Dockerfile.dev  pyproject.toml
containerization/app/: main.py
containerization/tests/: test_main.py
