[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad Aamir Azhar <125334680+aamirazhar122@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.18"
pytest = "^8.1.1"
httpx = "^0.27.0"
fastapi = "^0.111.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
